added search input box

--- a/filterDemo.html
+++ b/filterDemo.html
@@ -13,13 +13,11 @@
 <body>
     <h1>Filter Images</h1>
 
-    <div class="filter-buttons">
-        <button data-filter="all">All</button>
-        <button data-filter="nature">Nature</button>
-        <button data-filter="animal">Animals</button>
-        <button data-filter="city">City</button>
-        <button data-filter="car">Cars</button>
-        <button data-filter="rocket">Rockets</button>
+    <div class="form-container">
+        <form>
+            <input type="text" class="search-box" id="search-box">
+            <label for="search-box" id="search-label">Search</label>
+        </form>
     </div>
 
     <!-- image container start -->
